--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+  background-color: rgb(214,240,255);
+  color: rgb(0,125,209)
+}
