--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div [className]="version"></div>
 <app-nav />
-<app-home />
+<router-outlet></router-outlet>
 <footer>
   <app-footer />
 </footer>
