--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -1,7 +1,7 @@
 <nav>
   <ul>
     <li><a routerLink="/">Home</a></li>
-    <li><a routerLink="/aboutme">About</a></li>
-    <li><a routerLink="/contactme">Experience</a></li>
+    <li><a routerLink="/aboutme">About Me</a></li>
+    <li><a routerLink="/contactme">Contact Me</a></li>
   </ul>
 </nav>
