updated footer and styling for app-router

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,4 @@
-<div [className]="version"></div>
-<app-nav />
+<div hidden [className]="version"></div>
+<app-nav></app-nav>
 <router-outlet></router-outlet>
-<footer>
-  <app-footer />
-</footer>
+<app-footer></app-footer>
