--- a/src/app/pages/aboutme/aboutme.component.html
+++ b/src/app/pages/aboutme/aboutme.component.html
@@ -1,1 +1,5 @@
-<p>aboutme works!</p>
+
+<div class="centered">
+  <h2>About Me</h2>
+  <p>Full Stack Application Developer with 4+ years of experience of planning, writing, testing and debugging multiple ground-up applications. If I am not solving a coding problem problem in my head, I'm cooking new foods, playing disc golf, or spending time with my wife, daughter, and pup.</p>
+</div>
