--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,8 +1,10 @@
 body, html {
   height: 100%;
-  margin: 0;
+  margin-right: 15px;
+  margin-left: 15px;
   background-color: rgb(214,240,255);
-  color: rgb(0,125,209)
+  color: rgb(0,125,209);
+  font-family: sans-serif;
 }
 app-root {
   display: flex;
