added link to thehawkesnest in contact me and updated favicon

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -20,3 +20,11 @@ app-footer {
   text-align: center;
   padding: 1em;
 }
+
+.centered {
+  text-align: center;
+}
+
+.shadow {
+  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.4);
+}
