--- a/src/app/pages/contactme/contactme.component.html
+++ b/src/app/pages/contactme/contactme.component.html
@@ -1,18 +1,27 @@
-<div class="contact-me centered">
-  <h2>Contact Me - I like email!</h2>
+<div class="contact-me">
+  <h2 class="centered">Contact Me - I like email!</h2>
   <form (ngSubmit)="onSubmit()">
     <div class="form-group">
       <label for="name">Name</label>
-      <input type="text" id="name" name="name" (ngModel)="contact.name" required />
+      <input class="shadow" type="text" id="name" name="name" (ngModel)="contact.name" required />
     </div>
     <div class="form-group">
       <label for="email">Email</label>
-      <input type="email" id="email" name="email" (ngModel)="contact.email" required />
+      <input class="shadow" type="email" id="email" name="email" (ngModel)="contact.email" required />
     </div>
     <div class="form-group">
       <label for="message">Message</label>
-      <textarea id="message" name="message" (ngModel)="contact.message" required></textarea>
+      <textarea class="shadow" id="message" name="message" (ngModel)="contact.message" required></textarea>
     </div>
-    <button type="submit">Send</button>
+    <button class="shadow" type="submit">Send</button>
   </form>
+</div>
+
+<div class="centered">
+  <h2>OR</h2>
+  <p>You can reach me a different way (or take a look at my other links) here:</p>
+  <a href="https://www.thehawkesnest.com" target="_blank">
+    <img class="shadow" src="./thehawkesnest.png" alt="thehawkesnest" />
+  </a>
+  
 </div>
