--- a/src/app/pages/contactme/contactme.component.scss
+++ b/src/app/pages/contactme/contactme.component.scss
@@ -16,6 +16,8 @@ input, textarea {
   width: 100%;
   padding: 8px;
   box-sizing: border-box;
+  border-radius: 10px;
+  border: none;
 }
 
 textarea {
@@ -23,6 +25,7 @@ textarea {
 }
 
 button {
+  margin-left: 5px;
   text-decoration: none;
   padding: 5px 12px;
   background-color: #007bff;
@@ -39,3 +42,10 @@ button:hover {
   background-color: #003a79;
   cursor: pointer;
 }
+
+img {
+  border-radius: 20px;
+  max-width: 100%;
+}
+
+
