--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="main">
+<main class="main">
   <div class="content">
     <div class="left-side">
       <svg
@@ -143,4 +143,4 @@
       </div>
     </div>
   </div>
-</div>
+</main>
