--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -35,15 +35,18 @@
   }
 
   h1 {
-    font-size: 3.125rem;
-    color: var(--gray-900);
-    font-weight: 500;
+    font-size: 2rem;
+    font-weight: bolder;
     line-height: 100%;
     letter-spacing: -0.125rem;
     margin: 0;
     font-family: "Inter Tight", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
       Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
       "Segoe UI Symbol";
+  }
+
+  h2.title {
+    font-weight: lighter;
   }
 
   p {
@@ -70,7 +73,7 @@
     display: flex;
     justify-content: space-around;
     width: 100%;
-    max-width: 700px;
+    max-width: 900px;
     margin-bottom: 3rem;
   }
 
@@ -85,7 +88,8 @@
   .divider {
     width: 1px;
     background: var(--red-to-pink-to-purple-vertical-gradient);
-    margin-inline: 0.5rem;
+    margin-inline: 1.5rem;
+
   }
 
   .pill-group {
@@ -150,6 +154,14 @@
 
   .social-links a:hover svg path {
     fill: var(--gray-900);
+  }
+
+  .left-side {
+    width: 40%;
+  }
+  
+  .right-side {
+    width: 60%;
   }
 
   @media screen and (max-width: 650px) {
