--- a/src/styles.scss
+++ b/src/styles.scss
@@ -18,7 +18,6 @@ router-outlet {
 app-footer {
   margin-top: auto;
   text-align: center;
-  padding: 1em;
 }
 
 .centered {
@@ -27,4 +26,28 @@ app-footer {
 
 .shadow {
   box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.4);
+}
+
+.disabled {
+  background-color: grey;
+  color: grey
+}
+
+img {
+  border-radius: 20px;
+  max-width: 100%;
+}
+
+h2 {
+  margin: 0 2px 0 2px;
+}
+
+h3 {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+h4 {
+  margin-top: 0;
+  margin-bottom: 0;
 }
