--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -48,6 +48,7 @@
 
   h2.title {
     font-weight: lighter;
+    font-size: 1.3rem
   }
 
   p {
@@ -79,7 +80,7 @@
   }
 
   .content h1 {
-    margin-top: 1.75rem;
+    margin: 1.75rem 0 .2rem;
   }
 
   .content p {
