--- a/src/app/pages/contactme/contactme.component.html
+++ b/src/app/pages/contactme/contactme.component.html
@@ -1,17 +1,17 @@
 <main class="main">
   <div class="contact-me">
-    <h2 class="centered">Contact Me - I like email!</h2>
-    <form (ngSubmit)="onSubmit()">
+    <h2 class="centered">{{contactMe}}</h2>
+    <form (submit)="onSubmit($event)">
       <div class="form-group">
-        <input class="shadow" placeholder="Name" id="name" name="name" (ngModel)="contact.name" required />
+        <input class="shadow" placeholder="Name" id="name" name="from_name" required />
       </div>
       <div class="form-group">
-        <input class="shadow" placeholder="Email" type="email" id="email" name="email" (ngModel)="contact.email" required />
+        <input class="shadow" placeholder="Email" type="email" id="email" name="from_email" required />
       </div>
       <div class="form-group">
-        <textarea class="shadow" placeholder="Message..." id="message" name="message" (ngModel)="contact.message" required></textarea>
+        <textarea class="shadow" placeholder="Message..." id="message" name="message" required></textarea>
       </div>
-      <button class="shadow disabled" type="submit" disabled>Send</button>
+      <button class="shadow" type="submit">Send</button>
     </form>
   </div>
 
