--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -166,6 +166,15 @@
     width: 60%;
   }
 
+  a {
+    display: inline-block; // Ensures the anchor behaves well with an inline image
+    svg {
+      transition: transform 0.1s ease-in-out; // Smooth transition for scaling
+      &:hover {
+        transform: scale(1.1); // Adjust the scale factor as needed (1.1 means 10% bigger)
+      }
+    }
+  }
   @media screen and (max-width: 650px) {
     .content {
       flex-direction: column;
