updated mobile styling

--- a/src/app/components/job/job.component.html
+++ b/src/app/components/job/job.component.html
@@ -5,7 +5,7 @@
   </div>
   <h4 class="company">{{ company }}</h4>
   <p>{{ description }}</p>
-  <ul>
+  <ul class="technologies">
   @for (item of technologies; track item) {
     <li class="tech-item">{{item}}</li>
   }
