--- a/src/app/components/nav/nav.component.scss
+++ b/src/app/components/nav/nav.component.scss
@@ -29,9 +29,18 @@ nav ul li a {
   align-content: center;
   border-radius: 20px;
   transition: background-color 0.5s ease;
+  white-space: nowrap;
 }
 
 nav ul li a:hover {
   background-color: #007bff;
   color: white;
+}
+
+@media screen and (max-width: 650px) {
+  nav {
+    align-items: center;
+    justify-content: center;
+  }
+  
 }
