--- a/src/app/components/repo/repo.component.html
+++ b/src/app/components/repo/repo.component.html
@@ -1,3 +1,5 @@
-<!-- <h3>{{ repo.name }}</h3>
-<p>{{ repo.description }}</p>
-<a [href]="repo.html_url" target="_blank">View on GitHub</a> -->
+<div class="repo">
+  <h3>{{ name }}</h3>
+  <p>{{ description }}</p>
+  <a [href]="html_url" target="_blank">View on GitHub</a>
+</div>
