--- a/src/app/pages/contactme/contactme.component.html
+++ b/src/app/pages/contactme/contactme.component.html
@@ -3,13 +3,13 @@
     <h2 class="centered">{{contactMe}}</h2>
     <form (submit)="onSubmit($event)">
       <div class="form-group">
-        <input class="shadow" placeholder="Name" id="name" name="from_name" required />
+        <input class="shadow" ngModel="contact.name" placeholder="Name" id="name" name="from_name" required />
       </div>
       <div class="form-group">
-        <input class="shadow" placeholder="Email" type="email" id="email" name="from_email" required />
+        <input class="shadow" ngModel="contact.email" placeholder="Email" type="email" id="email" name="from_email" required />
       </div>
       <div class="form-group">
-        <textarea class="shadow" placeholder="Message..." id="message" name="message" required></textarea>
+        <textarea class="shadow" ngModel="contact.message" placeholder="Message..." id="message" name="message" required></textarea>
       </div>
       <button class="shadow" type="submit">Send</button>
     </form>
