--- a/src/app/pages/projects/projects.component.html
+++ b/src/app/pages/projects/projects.component.html
@@ -1,5 +1,5 @@
 <main class="main">
-  <div class="projects">
+  <div class="projects content">
     <h2 class="centered">{{title}}</h2>
     @for (repo of repos; track repo.name) {
       <app-repo
