--- a/src/app/pages/contactme/contactme.component.html
+++ b/src/app/pages/contactme/contactme.component.html
@@ -1,18 +1,24 @@
 <main class="main">
   <div class="contact-me">
     <h2 class="centered">{{contactMe}}</h2>
-    <form (submit)="onSubmit($event)">
-      <div class="form-group">
-        <input class="shadow" ngModel="contact.name" placeholder="Name" id="name" name="from_name" required />
-      </div>
-      <div class="form-group">
-        <input class="shadow" ngModel="contact.email" placeholder="Email" type="email" id="email" name="from_email" required />
-      </div>
-      <div class="form-group">
-        <textarea class="shadow" ngModel="contact.message" placeholder="Message..." id="message" name="message" required></textarea>
-      </div>
-      <button class="shadow" type="submit">Send</button>
-    </form>
+    @if (showForm) {
+      <form (submit)="onSubmit($event)">
+        <div class="form-group">
+          <input class="shadow" [(ngModel)]="contact.name" placeholder="Name" id="name" name="from_name" required />
+        </div>
+        <div class="form-group">
+          <input class="shadow" [(ngModel)]="contact.email" placeholder="Email" type="email" id="email" name="from_email" required />
+        </div>
+        <div class="form-group">
+          <textarea class="shadow" [(ngModel)]="contact.message" placeholder="Message..." id="message" name="message" required></textarea>
+        </div>
+        <button class="shadow" type="submit">Send</button>
+      </form>      
+    } @else {
+      <div class="centered">{{thanksForContacting}}</div>
+    }
+
+
   </div>
 
   <div class="centered">
