--- a/src/app/pages/contactme/contactme.component.scss
+++ b/src/app/pages/contactme/contactme.component.scss
@@ -1,5 +1,5 @@
 .contact-me {
-  max-width: 600px;
+  max-width: 400px;
   margin: 0 auto;
   padding-bottom: 2rem;
   
@@ -45,6 +45,8 @@ button {
 
 button:hover {
   background-color: #003a79;
+  transform: scale(1.3);
+  transition: transform 0.2s ease-in-out;
   cursor: pointer;
 }
 
@@ -57,13 +59,17 @@ button:hover {
 }
 
 a {
-  display: inline-block; // Ensures the anchor behaves well with an inline image
+  display: inline-block;
   img {
-    transition: transform 0.2s ease-in-out; // Smooth transition for scaling
+    transition: transform 0.2s ease-in-out;
     &:hover {
-      transform: scale(1.05); // Adjust the scale factor as needed (1.1 means 10% bigger)
+      transform: scale(1.05);
     }
   }
+}
+
+.thankyou {
+  font-weight: normal;
 }
 
 @media screen and (max-width: 650px) {
