--- a/src/app/pages/contactme/contactme.component.scss
+++ b/src/app/pages/contactme/contactme.component.scss
@@ -43,7 +43,7 @@ button {
   border: none;
 }
 
-button:hover {
+button.enabled:hover {
   background-color: #003a79;
   transform: scale(1.3);
   transition: transform 0.2s ease-in-out;
@@ -53,7 +53,7 @@ button:hover {
 .disabled {
   background-color: grey;
   :hover {
-    background-color: grey;
+    background-color: grey !important;
     cursor: none;
   }
 }
