--- a/src/app/components/nav/nav.component.scss
+++ b/src/app/components/nav/nav.component.scss
@@ -13,6 +13,7 @@ ul {
   margin: 0;
   li {
     a {
+      background-color: white;
       text-decoration: none;
       padding: 5px 12px;
       background-color: none;
@@ -24,10 +25,6 @@ ul {
       border-radius: 20px;
       transition: background-color 0.5s ease;
       white-space: nowrap;
-      &:hover {
-        background-color: #007bff;
-        color: white;
-      }
     }
   }
 }
@@ -94,8 +91,8 @@ ul li {
   ul {
     display: none;
     flex-direction: column;
-    padding: 10px;
-    margin-top: 1rem;
+    padding: 10px 20px;
+    margin: 1rem 0 0 0;
   }
 
   ul.show {
@@ -104,7 +101,10 @@ ul li {
 
   ul li {
     margin: 5px 0;
-    padding-bottom: 10px
+    padding-bottom: 10px;
+    a {
+      background-color: white;
+    }
   }
 
   .active {
